--- a/portfolio.html
+++ b/portfolio.html
@@ -6,57 +6,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <link
-          href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-         rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
     />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+
+    <link rel="stylesheet" href="./css/main.min.css" />
     <title>Портфолио</title>
   </head>
   <body>
     <!--Шапка сайта-->
     <header class="header">
-      <div class="container nav-container">
+      <div class="container header__container">
         <nav class="header-nav">
-          <a class="logo" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+          <a class="logo" href="./index.html">Web<span class="logo logo--black">Studio</span></a>
           <ul class="header-list">
-            <li class="item">
-              <a class="link" href="./index.html">Студия</a>
+            <li class="header-list__item">
+              <a class="header-list__link " href="./index.html">Студия</a>
             </li>
-            <li class="item">
-              <a class="link current link-line" href="./portfolio.html">Портфолио</a>
+            <li class="header-list__item">
+              <a class="header-list__link link--line current href="./portfolio.html">Портфолио</a>
             </li>
-            <li class="item">
-              <a class="link" href="#contacts">Контакты</a>
+            <li class="header-list__item">
+              <a class="header-list__link" href="#contacts">Контакты</a>
             </li>
           </ul>
         </nav>
-        <ul class="auth-nav-list">
-          <li class="item">
+        <ul class="auth-nav">
+          <li class="auth-nav__item">
             <a
-              class="link-mail"
+              class="auth-nav__link"
               href="mailto:info@devstudio.com"
               target="_blank"
               rel="noopener noreferrer"
               aria-label="иконка конверта"
             >
-              <svg class="mail-icon" width="16" height="16">
+              <svg class="auth-nav__icon" width="16" height="16">
                 <use href="./images/icons.svg#icon-mail-new"></use></svg
               >info@devstudio.com</a
             >
           </li>
-          <li class="item">
+          <li class="auth-nav__item">
             <a
-              class="link-tel"
+              class="auth-nav__link"
               href="tel:+380961111111"
               target="_blank"
               rel="noopener noreferrer"
               aria-label="иконка телефона"
             >
-              <svg class="tel-icon" width="16" height="16">
+              <svg class="auth-nav__icon" width="16" height="16">
                 <use href="./images/icons.svg#icon-tel-new"></use></svg
               >+38 096 111 11 11</a
             >
@@ -112,7 +113,7 @@
                 <div class="image-cover">
                   <img
                     src="./images/foto5.jpg"
-                    alt=" foto5 два человека играют в баскетбол"
+                    alt="foto5 баскетбол"
                     width="370"
                   />
                   <p class="product-description">
@@ -275,7 +276,9 @@
     <footer class="footer" id="contacts">
       <div class="container footer-web">
         <div class="footer-collums">
-          <a href="./index.html" class="logo-footer"><span class="logo-web">Web</span>Studio</a>
+          <a class="logo logo--complain" href="./index.html"
+            >Web<span class="logo logo--white">Studio</span></a
+          >
           <address class="adress-footer">
             <ul class="footer-list">
               <li class="item">
