--- a/index.html
+++ b/index.html
@@ -628,6 +628,7 @@
         </div>
       </div>
     </footer>
+    <!--Modal window-->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal-window">
         <button class="button-close" type="button" data-modal-close>
